--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <svg width="100%" height="100%" viewBox="0 0 1518 1314" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="house">
         <g clip-path="url(#clip0)">
-          <rect width="1518" height="1314" fill="#F8F8F5" />
           <g id="soil">
             <g id="Rectangle 67" filter="url(#filter0_d)">
               <path
@@ -73,7 +72,7 @@
             <rect id="Rectangle 34" width="414.603" height="400.226"
               transform="matrix(0.866025 -0.5 0.00153952 0.999999 317.051 328.084)" fill="#2B464F" />
             <rect id="Rectangle 31" width="399.282" height="392.781"
-              transform="matrix(0.866025 -0.5 0.00153952 0.999999 329.595 331.57)" fill="#C06C84" />
+              transform="matrix(0.866025 -0.5 0.00153952 0.999999 329.595 331.57)" fill="#AB6C82" />
             <rect id="Rectangle 35" width="398.923" height="15.6511"
               transform="matrix(0.866025 -0.5 0.00153952 0.999999 330.175 708.076)" fill="white" />
           </g>
@@ -81,7 +80,7 @@
             <rect id="Rectangle 33" width="408.14" height="514.005"
               transform="matrix(0 1 -0.866794 -0.498666 1121.09 377.505)" fill="#2B464F" />
             <rect id="Rectangle 32" width="394.311" height="504.374"
-              transform="matrix(0 1 -0.866794 -0.498666 1112.74 382.902)" fill="#D89BAD" />
+              transform="matrix(0 1 -0.866794 -0.498666 1112.74 382.902)" fill="#D8737F" />
             <rect id="Rectangle 36" width="15.6512" height="504.547"
               transform="matrix(0 1 -0.866794 -0.498666 1112.89 761.943)" fill="white" />
           </g>
@@ -284,11 +283,11 @@
             fill="black" fill-opacity="0.5" />
           <g id="ceil">
             <rect id="Rectangle 45" width="191.422" height="518.889"
-              transform="matrix(0.866025 0.5 -0.865255 0.501333 692.51 103.371)" fill="#E2BB9D" />
+              transform="matrix(0.866025 0.5 -0.865255 0.501333 692.51 103.371)" fill="#FCBB6D" />
             <rect id="Rectangle 48" width="191.422" height="518.889"
               transform="matrix(0.866025 0.5 -0.865255 0.501333 692.51 98.1538)" fill="#3F3F3F" />
             <rect id="Rectangle 63" width="346.507" height="136.94"
-              transform="matrix(0.866025 0.5 -0.865255 0.501333 814.74 225.155)" fill="#E2BB9D" />
+              transform="matrix(0.866025 0.5 -0.865255 0.501333 814.74 225.155)" fill="#FCBB6D" />
             <rect id="Rectangle 62" width="353.128" height="136.94"
               transform="matrix(0.866025 0.5 -0.865255 0.501333 808.968 215.629)" fill="#3F3F3F" />
           </g>
@@ -296,11 +295,11 @@
             <rect id="Rectangle 40" width="671.884" height="180.851"
               transform="matrix(-0.867667 -0.497147 0.997437 -0.0715547 1027.52 408.4)" fill="#332C3A" />
             <rect id="Rectangle 37" width="671.884" height="180.851"
-              transform="matrix(-0.867667 -0.497147 0.997437 -0.0715547 1027.52 397.965)" fill="#5F526B" />
+              transform="matrix(-0.867667 -0.497147 0.997437 -0.0715547 1027.52 397.965)" fill="#304159" />
             <rect id="Rectangle 39" width="191.424" height="357.92"
               transform="matrix(-0.866025 -0.5 0.590149 -0.807294 405.181 461.581)" fill="#332C3A" />
             <rect id="Rectangle 38" width="194.569" height="351.256"
-              transform="matrix(-0.866025 -0.5 0.590149 -0.807294 407.905 444.862)" fill="#6C5B7B" />
+              transform="matrix(-0.866025 -0.5 0.590149 -0.807294 407.905 444.862)" fill="#475C7A" />
           </g>
         </g>
       </g>
@@ -400,6 +399,8 @@
         </clipPath>
       </defs>
     </svg>
+  </div>
+  <div class="logs">
   </div>
 
   <script src="/scripts//app.js"></script>
